--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "engines": {
-    "node": "10.16.0" 
+    "node": "10.16.0"
   },
   "scripts": {
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "devServer": "webpack-dev-server",
-    "test": "jest --config=jest.config.json --watch",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json --watch",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
@@ -49,6 +49,8 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
+    "cross-env": "5.0.5",
+    "dotenv": "4.0.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "jest": "20.0.4",
